connection string updated

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URI=mongodb+srv://gowthamm21cse:G1O2W3T4H5A6M7@todolist.wphjz.mongodb.net/todolist?retryWrites=true&w=majority
+DATABASE_URI=mongodb+srv://gowthamm21cse:G1O2W3T4H5A6M7@todolist.wphjz.mongodb.net/?retryWrites=true&w=majority&appName=todolist
